fixed grid misalignment
the long grid blocks were showing on mobile as still being longer than the other blocks despite changes the mobile media queries to make them all the same width... grid was also set to the left instead of being centered...

not sure why this worked but I added a padding of 10px to .grid-layout and it fixed both issues.

--- a/style.css
+++ b/style.css
@@ -598,8 +598,8 @@ a{
 
     .close{
         margin: 15px;
-        opacity: 0; */
-    }
+        opacity: 0; 
+    }*/
     .subPage{
         visibility: visible;
     }
@@ -629,10 +629,10 @@ a{
         grid-template-rows: .2fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
         /* grid-template-rows: minmax(200px, auto); */
         grid-auto-flow: column dense;
-        /* padding: 10px; */
+        padding: 10px;
     }
     .span-4x2 .span-4x2-2 {
-        grid-column-end: span 1;
+        grid-column-end: span 2;
         grid-row-end: span 1;
         border-radius: 20px 20px 20px 60px;
         box-shadow: 0px 3px 12px grey;
